tdf#135438 Paragraph styles preview in sidebar are clipped

since...

commit fe9a13dc0e6d1384416c2a2343223b33925fc925
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Sun Apr 26 15:43:25 2020 +0100

    weld SfxTemplatePanelControl

getRenderSize used to be called after recalculate and before
render to change maSizePixel

Change-Id: Ifc1b6b0b3399c7de61d5f4d46f8346d13e72a4d7